# src/modules/users/users.routes.ts
@@ -1,0 +1,9 @@
+import { Router } from "express";
+import * as usersController from "./users.controller";
+
+const router = Router();
+
+router.get("/", usersController.users);
+
+export default router;
+
