# src/routes/v1/index.ts
@@ -1,6 +1,7 @@
 import { Router } from "express";
 import authRoutes from "../../modules/auth/auth.routes";
 import conversationRouter from "../../modules/conversation/conversation.routes";
+import usersRouter from "../../modules/users/users.routes";
 import { authenticateRequest } from "../../middlewares/authenticateRequest.middleware";
 
 const v1Router = Router();
@@ -10,6 +11,7 @@ v1Router.use("/auth", authRoutes);
 v1Router.use(authenticateRequest);
 
 // authenticated routes
-v1Router.use("/conversation", conversationRouter)
+v1Router.use("/conversations", conversationRouter);
+v1Router.use("/users", usersRouter);
 
 export default v1Router;
